--- a/app/css/footer.css
+++ b/app/css/footer.css
@@ -50,7 +50,7 @@
 }
 
 .username{
-    color: #ffffff;
+    color: #000000;
 }
 
 .username::after{
@@ -58,6 +58,6 @@
     display: block;
     width: 100%;
     height: 1px;
-    background: #ffffff;
+    background: #000000;
     margin-top: 0.2rem;
 }
